[package]
name = "primitives-stark"
version = "0.1.0"
authors = ["dejavukong <foxcong.yolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
rand = "0.7.3"
blake3 = "0.3.5"
sha3 = "0.8.2"
crossbeam-utils = "0.7.2"
bincode = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
log = "0.4.11"
env_logger = "0.7.1"
distaff = { git = "https://github.com/GuildOfWeavers/distaff.git" }

[dev-dependencies]
criterion = "0.3.3"
num-bigint = "0.3.0"